# sam_ui

./: .gitignore  Cargo.toml  README.md
assets/: header.css  main.css  slideshow.css
src/: lib.rs  slideshow2.rs
src/header/: check.rs  menu.rs  menu_backup.rs  menu_bar.rs  menu_list.rs  mod.rs  sub_menu.rs
src/macros/: icon.rs  mod.rs
src/slideshow/: animation.rs  mod copy.rs
