[package]
name = "sam_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true}
dioxus-sdk = { workspace = true, features = ["timing"]}
dioxus-free-icons = { version = "0.9", optional = true }

wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [ "HtmlCollection","DomTokenList","Element","IntersectionObserver","IntersectionObserverInit","HtmlElement"] }
gloo-timers = {version = "0.3.0", features = ["futures"]}

# My Libs
sam_util = { workspace = true}

[features]
default = ["ld"]
io = ["dioxus-free-icons/ionicons"]
ld = ["dioxus-free-icons/lucide"]
bs = ["dioxus-free-icons/bootstrap"]
